# OpusEdge

./: .gitignore  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
bench/: README.md  bench_llm_scaling.py  llm_chunked_falcon_16k.json  llm_chunked_falcon_65k.json  llm_chunked_granite_65k.json  llm_chunked_qwen_32k.json  llm_chunked_qwen_65k.json  llm_chunked_qwen_65k_b4k.json  main.py  plot_3d.py  plot_scaling.py  pyproject.toml  results.json  run_bench.py
bench/opusedge_bench/: __init__.py  all_primitives.py  primitives_py.py  runner.py  signals.py
docs/: architecture.md  benchmarks.md  getting-started.md  index.html  primitives.md
engine/: CMakeLists.txt  README.md  setup.py  wrapper.cpp
engine/benchmarks/: CMakeLists.txt  bench_delta_ar.cpp  bench_pipeline.cpp  bench_scaling.cpp
engine/cmake/: opusedge.pc.in  opusedgeConfig.cmake.in  uninstall.cmake.in
engine/docs/: DETAILED.md  architecture.md
engine/examples/: CMakeLists.txt  all_primitives_demo.cpp  delta_ar_demo.cpp
engine/include/opusedge/: sdk.h
engine/include/opusedge/core/: config.h  signal.h  types.h
engine/include/opusedge/primitives/: cal.h  composite.h  delta_ar.h  delta_rank.h  ebar.h  gakv.h  head_gate.h  ipss.h  mpsr.h  ndpa.h  pareto.h  rcal.h  selkv.h  smsa.h  ssr.h  state_compress.h
engine/opusedge_cpp/: __init__.py  sdk.py
engine/tests/: CMakeLists.txt  test_cal.cpp  test_delta_ar.cpp  test_delta_rank.cpp  test_head_gate.cpp  test_pareto.cpp  test_selkv.cpp  test_signal.cpp  test_smsa.cpp  test_state_compress.cpp
paper/: LICENSE  OpusEdge.docx  README.md  opusedge.aux  opusedge.bbl  opusedge.bib  opusedge.blg  opusedge.tex
web/: index.html
